--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,20 @@
-/build
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc.)
+local.properties
+
+# Android Studio files
+.idea/
+*.iml
+
+# Log files
+*.log
+
+# Mac system files
+.DS_Store
+
+# Others
+captures/
+.externalNativeBuild/
